<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"

    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    android:orientation="vertical"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/albumArtBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/player_background"
        android:scaleType="centerCrop"
        android:src="@drawable/player_background" />

    <LinearLayout
        android:id="@+id/audioPlayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/player_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#33000000"
            android:elevation="6dp"
            android:theme="@style/toolbarTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_of_the_track"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/trackSub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_2018"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/albumArt"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/album_art"
                android:scaleType="centerCrop"
                android:src="@drawable/player_background" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="0" />

            <LinearLayout
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#33000000"
                android:orientation="horizontal"
                android:paddingTop="2dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/cTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingEnd="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/_00_00"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/eTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/_00_00"
                    android:textColor="#fff" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/controlBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timer"
                android:background="#33000000"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <ImageButton
                    android:id="@+id/fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/favorite"
                    android:padding="12dp"
                    android:src="@drawable/ic_favorite_border_white_24dp" />

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/prev"
                    android:padding="12dp"
                    android:src="@drawable/ic_skip_previous_white_24dp" />

                <ImageButton
                    android:id="@+id/control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/play_all"
                    android:src="@drawable/ic_play_circle" />

                <ProgressBar
                    android:id="@+id/loadingExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/next"
                    android:padding="12dp"
                    android:src="@drawable/ic_skip_next_white_24dp" />

                <ImageButton
                    android:id="@+id/repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/repeat"
                    android:padding="12dp"
                    android:src="@drawable/ic_repeat_white_24dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btmSheet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:progress="100"
            android:progressDrawable="@drawable/progress_drawable_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#000"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/album_art"
                android:src="@drawable/player_background" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/title_of_track"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/artist_2018"
                    android:textColor="#fff"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <android.support.design.widget.CheckableImageButton
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack"
                    android:padding="20dp"
                    android:src="@drawable/ic_pause" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>